[package]
name = "trackjoy"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = { version = "0.0.4", features = ["serde_json"] }
evdev = { git = "https://github.com/emberian/evdev.git", rev = "4c2b3196ab9ccf00400e19e698265412091c0a1e", features = [
    "tokio",
    "serde",
] }
glam = "0.24.1"
loga = "0.1.5"
manual_future = "0.1.1"
taskmanager = "0.1.2"
tokio = { version = "1.29.0", features = ["rt", "process"] }
notify = "5.0.1"
futures = "0.3.28"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
structre = "0.0.1"
